add ReclaimElements class with add and showDetails functions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <ul>
+    <li class="reclaim">
+      ABS grey <span>62000m</span> 
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      MB 352 <span>63177m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      MB 350 <span>63044m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+  </ul>
+  <script src="js/ReclaimElement.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
