add addEverethibg buttton and function

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <button class="details">Szczegóły</button>
     </li>
   </ul>
+  <button class="sum">Zsumuj wszystko
+  </button>
   <script src="js/ReclaimElement.js"></script>
   <script src="js/main.js"></script>
 </body>
