add gitigore file and add reclaim to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,62 @@
 <body>
   <ul>
     <li class="reclaim">
-      ABS grey <span>62000m</span> 
+      Terluran <span>62110m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      Abs Argutec <span>620002m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      ABS/PC Pulse Natur <span>620010m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      ABS NOV.P2H <span>62113m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      ABS Elix P2Hat  <span>62117m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      ABS Starex Black grey <span>62256m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      ABS Elix M203 Black <span>62299m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      Mb 350 <span>63044m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      PP Hostacom HYG <span>63047m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      PP GF 30 Hostacom g3N01<span>63049m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      PP Homo Hb601WG Natur <span>63133m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      HKC 182L B-G <span>63162m</span>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
@@ -19,7 +74,67 @@
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      MB 350 <span>63044m</span>
+      Polifil <span>63185m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      Alfater XL a70i <span>66041m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      Alfater XL A60I <span>66075m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      TPV Elastropene <span>70772m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      ABS Bayblend <span>67117m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      Domamid <span>65446m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      ABS Elix Black <span>620000m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      ABS Elix AntrazitGrau <span>62293m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      ABS Elix Natur <span>62003m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      Crystal <span>610030m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      ABS LG <span>620104m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      PP Homo Hostacom Grey <span>63048m</span>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      PMMA <span>72529m</span>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
