--- a/index.html
+++ b/index.html
@@ -9,132 +9,132 @@
 <body>
   <ul>
     <li class="reclaim">
-      Terluran <span>62110m</span>
+      Terluran <p class ="coko-id">62110m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      Abs Argutec <span>620002m</span>
+      Abs Argutec <p class ="coko-id">620002m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      ABS/PC Pulse Natur <span>620010m</span>
+      ABS/PC Pulse Natur <p class ="coko-id">620010m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      ABS NOV.P2H <span>62113m</span>
+      ABS NOV.P2H <p class ="coko-id">62113m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      ABS Elix P2Hat  <span>62117m</span>
+      ABS Elix P2Hat  <p class ="coko-id">62117m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      ABS Starex Black grey <span>62256m</span>
+      ABS Starex Black grey <p class ="coko-id">62256m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      ABS Elix M203 Black <span>62299m</span>
+      ABS Elix M203 Black <p class ="coko-id">62299m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      Mb 350 <span>63044m</span>
+      Mb 350 <p class ="coko-id">63044m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      PP Hostacom HYG <span>63047m</span>
+      PP Hostacom HYG <p class ="coko-id">63047m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      PP GF 30 Hostacom g3N01<span>63049m</span>
+      PP GF 30 Hostacom g3N01<p class ="coko-id">63049m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      PP Homo Hb601WG Natur <span>63133m</span>
+      PP Homo Hb601WG Natur <p class ="coko-id">63133m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      HKC 182L B-G <span>63162m</span>
+      HKC 182L B-G <p class ="coko-id">63162m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      MB 352 <span>63177m</span>
+      MB 352 <p class ="coko-id">63177m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      Polifil <span>63185m</span>
+      Polifil <p class ="coko-id">63185m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      Alfater XL a70i <span>66041m</span>
+      Alfater XL a70i <p class ="coko-id">66041m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      Alfater XL A60I <span>66075m</span>
+      Alfater XL A60I <p class ="coko-id">66075m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      TPV Elastropene <span>70772m</span>
+      TPV Elastropene <p class ="coko-id">70772m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      ABS Bayblend <span>67117m</span>
+      ABS Bayblend <p class ="coko-id">67117m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      Domamid <span>65446m</span>
+      Domamid <p class ="coko-id">65446m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      ABS Elix Black <span>620000m</span>
+      ABS Elix Black <p class ="coko-id">620000m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      ABS Elix AntrazitGrau <span>62293m</span>
+      ABS Elix AntrazitGrau <p class ="coko-id">62293m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      ABS Elix Natur <span>62003m</span>
+      ABS Elix Natur <p class ="coko-id">62003m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      Crystal <span>610030m</span>
+      Crystal <p class ="coko-id">610030m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      ABS LG <span>620104m</span>
+      ABS LG <p class ="coko-id">620104m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      PP Homo Hostacom Grey <span>63048m</span>
+      PP Homo Hostacom Grey <p class ="coko-id">63048m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
-      PMMA <span>72529m</span>
+      PMMA <p class ="coko-id">72529m</p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
