add some changes

--- a/index.html
+++ b/index.html
@@ -120,28 +120,41 @@
       <button class="details">Szczegóły</button>
     </li>
     <li class="reclaim">
+      ABS Elix Grey <p class ="coko-id">62000m<span class="sum"></span></p>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    </ul>
+    <p class="sum1">Suma: 0</p>
+    <ul>
+    <li class="reclaim2">
       Crystal <p class ="coko-id">610030m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
+    <li class="reclaim2">
       ABS LG <p class ="coko-id">620104m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
+    <li class="reclaim2">
       PP Homo Hostacom Grey <p class ="coko-id">63048m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      PMMA <p class ="coko-id">72529m<span class="sum"></span></p><
+    <li class="reclaim2">
+      PMMA <p class ="coko-id">72529m<span class="sum"></span></p>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim2">
+      TPE Santropene <p class ="coko-id">660349m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
   </ul>
-  <button class="sum-everything">Zsumuj wszystko
-  </button>
+  <p class="sum2">Suma: 0</p>
+  <script src="js/AnotherReclaimElement.js"></script>
   <script src="js/ReclaimElement.js"></script>
   <script src="js/main.js"></script>
 </body>
