add headers to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <h1>Oblicz sumę regenratów</h1>
+  <h2>Tworzywo</h2>
   <ul>
     <li class="reclaim">
       Terluran <p class ="coko-id">62110m<span class="sum"></span></p>
@@ -126,6 +128,7 @@
     </li>
     </ul>
     <p class="sum1">Suma: 0</p>
+    <h2>Tworzywo zmielone do przetrysku</h2>
     <ul>
     <li class="reclaim2">
       Crystal <p class ="coko-id">610030m<span class="sum"></span></p>
