add some little changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Oblicz sumę regenratów</h1>
+  <h1>Oblicz sumę regeneratów</h1>
   <h2>Tworzywo</h2>
   <ul>
     <li class="reclaim">
