correct index.html

--- a/index.html
+++ b/index.html
@@ -126,6 +126,16 @@
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
+    <li class="reclaim">
+      PP Homo Hostacom Grey <p class ="coko-id">63048m<span class="sum"></span></p>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
+    <li class="reclaim">
+      TPE Santropene <p class ="coko-id">66034m<span class="sum"></span></p>
+      <button class="add">Dodaj</button>
+      <button class="details">Szczegóły</button>
+    </li>
     </ul>
     <p class="sum1">Suma: 0</p>
     <h2>Tworzywo zmielone do przetrysku</h2>
@@ -140,21 +150,13 @@
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim2">
-      PP Homo Hostacom Grey <p class ="coko-id">63048m<span class="sum"></span></p>
-      <button class="add">Dodaj</button>
-      <button class="details">Szczegóły</button>
-    </li>
+    
     <li class="reclaim2">
       PMMA <p class ="coko-id">72529m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim2">
-      TPE Santropene <p class ="coko-id">66034m<span class="sum"></span></p>
-      <button class="add">Dodaj</button>
-      <button class="details">Szczegóły</button>
-    </li>
+    
   </ul>
   <p class="sum2">Suma: 0</p>
   <script src="js/AnotherReclaimElement.js"></script>
