--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kalkulator regeneratów</title>
+  <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -159,6 +160,7 @@
     
   </ul>
   <p class="sum2">Suma: 0</p>
+  <script src="index.js"></script>
   <script src="js/AnotherReclaimElement.js"></script>
   <script src="js/ReclaimElement.js"></script>
   <script src="js/main.js"></script>
