--- a/index.html
+++ b/index.html
@@ -12,128 +12,103 @@
   <h1>Oblicz sumę regeneratów</h1>
   <h2>Tworzywo</h2>
   <ul>
-    <li class="reclaim">
-      Terluran <p class ="coko-id">62110m<span class="sum"></span></p>
+    <li class="reclaim">Terluran<p class ="coko-id">62110m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      Abs Argutec <p class ="coko-id">620002m<span class="sum"></span></p>
+    <li class="reclaim">Abs Argutec<p class ="coko-id">620002m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      ABS/PC Pulse Natur <p class ="coko-id">620010m<span class="sum"></span></p>
+    <li class="reclaim">ABS/PC Pulse Natur<p class ="coko-id">620010m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      ABS NOV.P2H <p class ="coko-id">62113m<span class="sum"></span></p>
+    <li class="reclaim">ABS NOV.P2H<p class ="coko-id">62113m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      ABS Elix P2Hat  <p class ="coko-id">62117m<span class="sum"></span></p>
+    <li class="reclaim">ABS Elix P2Hat<p class ="coko-id">62117m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      ABS Starex Black grey <p class ="coko-id">62256m<span class="sum"></span></p>
+    <li class="reclaim">ABS Starex Black grey<p class ="coko-id">62256m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      ABS Elix M203 Black <p class ="coko-id">62299m<span class="sum"></span></p>
+    <li class="reclaim">ABS Elix M203 Black<p class ="coko-id">62299m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      Mb 350 <p class ="coko-id">63044m<span class="sum"></span></p>
+    <li class="reclaim">Mb 350<p class ="coko-id">63044m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      PP Hostacom HYG <p class ="coko-id">63047m<span class="sum"></span></p>
+    <li class="reclaim">PP Hostacom HYG<p class ="coko-id">63047m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      PP GF 30 Hostacom g3N01<p class ="coko-id">63049m<span class="sum"></span></p>
+    <li class="reclaim">PP GF 30 Hostacom g3N01<p class ="coko-id">63049m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      PP Homo Hb601WG Natur <p class ="coko-id">63133m<span class="sum"></span></p>
+    <li class="reclaim">PP Homo Hb601WG Natur<p class ="coko-id">63133m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      HKC 182L B-G <p class ="coko-id">63162m<span class="sum"></span></p>
+    <li class="reclaim">HKC 182L B-G<p class ="coko-id">63162m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      MB 352 <p class ="coko-id">63177m<span class="sum"></span></p>
+    <li class="reclaim">MB 352<p class ="coko-id">63177m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      Polifil <p class ="coko-id">63185m<span class="sum"></span></p>
+    <li class="reclaim">Polifil<p class ="coko-id">63185m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      Alfater XL a70i <p class ="coko-id">66041m<span class="sum"></span></p>
+    <li class="reclaim">Alfater XL a70i<p class ="coko-id">66041m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      Alfater XL A60I <p class ="coko-id">66075m<span class="sum"></span></p>
+    <li class="reclaim">Alfater XL A60I<p class ="coko-id">66075m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      TPV Elastropene <p class ="coko-id">70772m<span class="sum"></span></p>
+    <li class="reclaim">TPV Elastropene<p class ="coko-id">70772m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      ABS Bayblend <p class ="coko-id">67117m<span class="sum"></span></p>
+    <li class="reclaim">ABS Bayblend<p class ="coko-id">67117m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      Domamid <p class ="coko-id">65446m<span class="sum"></span></p>
+    <li class="reclaim">Domamid<p class ="coko-id">65446m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      ABS Elix Black <p class ="coko-id">620000m<span class="sum"></span></p>
+    <li class="reclaim">ABS Elix Black<p class ="coko-id">620000m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      ABS Elix AntrazitGrau <p class ="coko-id">62293m<span class="sum"></span></p>
+    <li class="reclaim">ABS Elix AntrazitGrau<p class ="coko-id">62293m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      ABS Elix Natur <p class ="coko-id">62003m<span class="sum"></span></p>
+    <li class="reclaim">ABS Elix Natur<p class ="coko-id">62003m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      ABS Elix Grey <p class ="coko-id">62000m<span class="sum"></span></p>
+    <li class="reclaim">ABS Elix Grey<p class ="coko-id">62000m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      PP Homo Hostacom Grey <p class ="coko-id">63048m<span class="sum"></span></p>
+    <li class="reclaim">PP Homo Hostacom Grey<p class ="coko-id">63048m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim">
-      TPE Santropene <p class ="coko-id">66034m<span class="sum"></span></p>
+    <li class="reclaim">TPE Santropene<p class ="coko-id">66034m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
@@ -141,19 +116,16 @@
     <p class="sum1">Suma: 0</p>
     <h2>Tworzywo zmielone do przetrysku</h2>
     <ul>
-    <li class="reclaim2">
-      Crystal <p class ="coko-id">610030m<span class="sum"></span></p>
+    <li class="reclaim2">Crystal<p class ="coko-id">610030m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
-    <li class="reclaim2">
-      ABS LG <p class ="coko-id">620104m<span class="sum"></span></p>
+    <li class="reclaim2">ABS LG<p class ="coko-id">620104m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
     
-    <li class="reclaim2">
-      PMMA <p class ="coko-id">72529m<span class="sum"></span></p>
+    <li class="reclaim2">PMMA<p class ="coko-id">72529m<span class="sum"></span></p>
       <button class="add">Dodaj</button>
       <button class="details">Szczegóły</button>
     </li>
