add refresh button and function

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     
   </ul>
   <p class="sum2">Suma: 0</p>
+  <button class="refresh">Zacznij od nowa</button>
   <script src="index.js"></script>
   <script src="js/AnotherReclaimElement.js"></script>
   <script src="js/ReclaimElement.js"></script>
